--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <!-- أيقونة البحث في أقصى اليسار -->
+    <!-- أيقونة البحث في اليسار -->
     <div class="search-icon">
       <i class="fas fa-search"></i>
     </div>
@@ -10,16 +10,15 @@
       <img src="assets/images/logo.png" alt="شعار الموقع">
     </div>
     
-    <!-- القائمة المنسدلة في أقصى اليمين -->
+    <!-- القائمة المنسدلة في اليمين -->
     <div class="dropdown">
       <button class="dropbtn">
-        <i class="fas fa-ellipsis-v"></i>
+        <i class="fas fa-bars"></i>
       </button>
       <div class="dropdown-content">
-        <a href="index.html"><i class="fas fa-home"></i> الرئيسية</a>
-        <a href="about.html"><i class="fas fa-info-circle"></i> من نحن</a>
-        <a href="contact.html"><i class="fas fa-envelope"></i> اتصل بنا</a>
-        <a href="#"><i class="fas fa-user"></i> تسجيل الدخول</a>
+        <a href="index.html">الرئيسية</a>
+        <a href="about.html">من نحن</a>
+        <a href="contact.html">اتصل بنا</a>
       </div>
     </div>
   </div>
